--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts "
+    "dev:server": "DEBUG=app:* ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts "
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "debug": "^4.3.1",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^4.6.0",
+    "http-status-codes": "^2.1.4",
+    "joi": "^17.4.0"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "3.7.1",
     "@typescript-eslint/parser": "3.7.1",
