implementing settings to database

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
+# app settings
 SECRET=[APP SECRET]
+
+# database settings
+USER_DB=[USER_DB]
+HOST_DB=[HOST_DB]
+DATABASE_NAME=[DATABASE_NAME]
+PASSWORD_DB=[PASSWORD_DB]
+PORT_DB=[PORT_DB]
