--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "online-menus",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/androdri1998/online-menus.git",
   "author": "André Rodrigues <andre.rodrigues98@outlook.com>",
   "license": "MIT",
@@ -18,12 +17,14 @@
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/pg": "^8.6.0",
     "@typescript-eslint/eslint-plugin": "3.7.1",
     "@typescript-eslint/parser": "3.7.1",
     "eslint": "6.8.0",
