--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "DEBUG=app:* ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts "
+    "dev:server": "DEBUG=app:* ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts ",
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.0",
@@ -36,7 +38,9 @@
     "eslint-import-resolver-typescript": "2.2.0",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-prettier": "3.1.4",
+    "jest": "^27.0.4",
     "prettier": "2.0.5",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   }
