--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status-codes": "^2.1.4",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.6.0",
     "uuid": "^8.3.2"
   },
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.6",
     "@types/pg": "^8.6.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "3.7.1",
